# Flask-RESTful-Scaffold

./: LICENSE  README.md  setup.cfg
.github/workflows/: python-publish.yml
flask_restful_scaffold/: __init__.py  __main__.py
