[metadata]
name = flask_restful_scaffold
version = 0.0.2
author = JiaoXiangNing
author_email = 2438822080@qq.com
description = Flask RESTful Scaffold
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jiaoxn-programmer/Flask-RESTful-Scaffold.git
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    flask_restful_cli = flask_restful_scaffold.hello:hello